@@ -1,0 +1,3 @@
+#! stap -bM
+probe addevent.* ? {}
+probe timer.ms(30000) { exit() }
